--- a/module/User/view/sidebar/sidebar.phtml
+++ b/module/User/view/sidebar/sidebar.phtml
@@ -1,19 +1,22 @@
 <?php 
+    use Zend\Session\Container;
 
+    // Store data in session
+    $company = new Container('user');
 ?>
 <div class="profile-sidebar">
 <!-- SIDEBAR USERPIC -->
 <div class="profile-userpic">
-    <img src="http://keenthemes.com/preview/metronic/theme/assets/admin/pages/media/profile/profile_user.jpg" class="img-responsive" alt="">
+    <img src="<?php echo $company->companylogo; ?>" class="img-responsive" alt="">
 </div>
 <!-- END SIDEBAR USERPIC -->
 <!-- SIDEBAR USER TITLE -->
 <div class="profile-usertitle">
     <div class="profile-usertitle-name">
-        <?php echo $company->companyname; ?>
+        <?php echo $company->companytitle; ?>
     </div>
     <div class="profile-usertitle-job">
-        <?php echo $company->industrytype; ?>
+        <?php echo $company->companytype; ?>
     </div>
 </div>
 <!-- END SIDEBAR USER TITLE -->
@@ -21,32 +24,32 @@
 <div class="profile-usermenu">
     <ul class="nav">
         <li class="active">
-            <a href="#">
+            <a href="<?php echo $this->serverUrl($this->url('employer')); ?>">
             <i class="glyphicon glyphicon-home"></i>
             Overview </a>
         </li>
         <li>
-            <a href="#">
+            <a href="<?php echo $this->serverUrl($this->url('employer', array('action'=>'changelogo', 'id' => $company->id))); ?>">
             <i class="glyphicon glyphicon-picture"></i>
             Change Logo</a>
         </li>
         <li>
-            <a href="#">
+            <a href="<?php echo $this->serverUrl($this->url('employer', array('action'=>'edit', 'id' => $company->id))); ?>">
             <i class="glyphicon glyphicon-user"></i>
-            My Account</a>
+            Account Information</a>
         </li>
         <li>
-            <a href="#">
+            <a href="<?php echo $this->serverUrl($this->url('employer', array('action'=>'changepass', 'id' => $company->userid))); ?>">
             <i class="glyphicon glyphicon-lock"></i>
             Change Password</a>
         </li>
         <li>
-            <a href="#" target="_blank">
+            <a href="<?php echo $this->serverUrl($this->url('employer', array('action'=>'jobs', 'id' => $company->userid))); ?>">
             <i class="glyphicon glyphicon-list"></i>
             Manage Jobs</a>
         </li>
         <li>
-            <a href="#">
+            <a href="<?php echo $this->serverUrl($this->url('logout')); ?>" >
             <i class="glyphicon glyphicon-log-out"></i>
             Logout </a>
         </li>
