--- a/module/Admin/view/template/banner/edit.phtml
+++ b/module/Admin/view/template/banner/edit.phtml
@@ -3,7 +3,7 @@ $title = 'Edit Banner';
 $this->headTitle($title);
 ?>
 <div class="row">
-    <h3>Adding new banner</h3>
+    <h3>Edit banner</h3>
     <form class="form-horizontal" role="form" id="tab" method="post" enctype="multipart/form-data" action="<?php echo $this->serverUrl($this->url('admin-banner', array('action'=>'save'))); ?>">
         <input type="hidden" id="id" name="id" value="<?php echo $banner->id; ?>" />
         <input type="hidden" id="banner" name="banner" value="<?php echo $banner->banner; ?>" />
