--- a/module/Job/view/template/index/index.phtml
+++ b/module/Job/view/template/index/index.phtml
@@ -1,11 +1,11 @@
 
 <div class="row">
     <div class="col-md-12">
-        <h1>Job Posts</h1>
+        <div class="page-header"><h1>Recent Jobs</h1></div>
         <?php foreach ($jobs as $val) : ?>
-            <h2 class="page-title"><?php echo $val->title; ?></h2>
+        <div class="page-title"><h2><?php echo $val->title; ?></h2></div>
             <div class="page-body">
-                <?php echo $val->description; ?>
+                <?php echo $val->description; ?> ...<a href="<?php echo $this->serverUrl($this->url('job', array('action'=>'view', 'id'=>$val->id))); ?>"> Read more </a>
             </div>
         <?php endforeach; ?>
     </div>
