--- a/module/User/view/template/employer/changepass.phtml
+++ b/module/User/view/template/employer/changepass.phtml
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-md-9">
-        <h1 class="page-title">Change password</h1>
+        <h1 class="page-title">Edit account information</h1>
         <div class="page-body">
             <form class="form-horizontal" role="form" method="post" action="<?php echo $this->serverUrl($this->url('employer', array('action'=>'changepass'))); ?>">
                 <input type="hidden" name="id" value="<?php echo $id; ?>" />
