--- a/module/User/view/template/employer/dashboard.phtml
+++ b/module/User/view/template/employer/dashboard.phtml
@@ -84,7 +84,7 @@
                 </p>
             </div>
             <div class="row">
-                <a id="editdesc" href="#" onclick="getupdatedetailform();"><i class="glyphicon glyphicon-edit"></i></a>
+                <a id="editdesc" href="javascript:void(0)" onclick="getupdatedetailform();"><i class="glyphicon glyphicon-edit"></i></a>
                 <div id="descriptionshow"><?php echo $company->description; ?></div>
             </div>
         </div>
