--- a/module/Application/view/layout/empty.phtml
+++ b/module/Application/view/layout/empty.phtml
@@ -81,7 +81,7 @@
         <footer class="navbar navbar-default navbar-fixed-bottom">
             <div class="container">
                 <p class="navbar-text pull-left">
-                    &copy; 2005 - <?php echo date('Y') ?> by Zend Technologies Ltd. <?php echo $this->translate('All rights reserved.') ?>
+                    &copy; 2005 - <?php echo date('Y') ?> by Goyal HR Consultant. <?php echo $this->translate('All rights reserved.') ?>
                 </p>
             </div>
         </footer>
