--- a/module/Contact/view/template/index/index.phtml
+++ b/module/Contact/view/template/index/index.phtml
@@ -7,7 +7,7 @@ $this->headTitle($title);
         <div class="page-header"><h1><?php echo $title; ?></h1></div>
         <div class="page-body">
             <p>We would like to respond your queries that you may have. You can directly mail your query on below location and contact no. +91 9263 189 425.</p>
-            <div class="col-md-3">
+            <div class="col-md-4">
                 <p>
                     <strong>Address</strong><br/>
                     G/4, Ground Floor<br/>
@@ -17,11 +17,13 @@ $this->headTitle($title);
                 </p>
                 <p>
                     <strong>Contact No's</strong><br/>
-                    Phone : +91 712 2222 745<br/>
-                    Mobile : +91 9263 189 425<br/>
+                    <p><i class="glyphicon glyphicon-phone-alt"></i> <abbr title="Phone">P</abbr>: +91 712 2222 745</p>
+                    <p><i class="glyphicon glyphicon-phone"></i> <abbr title="Mobile">M</abbr>: +91 9263 189 425</p>
+                    <p><i class="glyphicon glyphicon-envelope"></i> <abbr title="Email">E</abbr>: <a href="mailto:help@goyalhr.com">help@goyalhr.com</a></p>
+                    <p><i class="glyphicon glyphicon-time"></i> <abbr title="Hours">H</abbr>: Monday - Friday: 9:00 AM to 5:00 PM</p>
                 </p>
             </div>
-            <div class="col-md-9">
+            <div class="col-md-8">
                 <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script><div style="overflow:hidden;height:400px;width:600px;"><div id="gmap_canvas" style="height:400px;width:600px;"></div><style>#gmap_canvas img{max-width:none!important;background:none!important}</style><a class="google-map-code" href="http://www.themecircle.net" id="get-map-data">Goyal  Hr Consultant</a></div><script type="text/javascript"> function init_map(){var myOptions = {zoom:11,center:new google.maps.LatLng(28.6139391,77.20902120000005),mapTypeId: google.maps.MapTypeId.ROADMAP};map = new google.maps.Map(document.getElementById("gmap_canvas"), myOptions);marker = new google.maps.Marker({map: map,position: new google.maps.LatLng(28.6139391, 77.20902120000005)});infowindow = new google.maps.InfoWindow({content:"<b>Goyal  Hr Consultant</b><br/>Birenu Asha Palace, 121, Sanjay Road, Sakchi<br/> Jamshedpur, Delhi, India " });google.maps.event.addListener(marker, "click", function(){infowindow.open(map,marker);});infowindow.open(map,marker);}google.maps.event.addDomListener(window, 'load', init_map);</script>
             </div>
             <div class="col-md-12"><br/>
