--- a/module/Page/view/template/index/index.phtml
+++ b/module/Page/view/template/index/index.phtml
@@ -1,10 +1,8 @@
 <div class="row">
-    <div class="col-md-12">
-        <?php foreach ($pages as $val) : ?>
-            <h2 class="page-title"><?php echo $val->title; ?></h2>
-            <div class="page-body">
-                <?php echo $val->contents; ?>
-            </div>
-        <?php endforeach; ?>
+    <div class="col-lg-12">
+        <div class="page-header"><h1><?php echo $page->title; ?></h1></div>
+        <div class="page-body">
+            <?php echo $page->contents; ?>
+        </div>
     </div>
 </div>
