--- a/module/Application/view/partial/footer.phtml
+++ b/module/Application/view/partial/footer.phtml
@@ -1,4 +1,4 @@
-<footer class="navbar navbar-default navbar-fixed-bottom">
+<footer id="footer" class="midnight-blue">
     <div class="container">
         <p class="navbar-text pull-left">
                 &copy; 2005 - <?php echo date('Y') ?> by Goyal HR Consultant. <?php echo $this->translate('All rights reserved.') ?>
