--- a/module/Application/view/partial/header.phtml
+++ b/module/Application/view/partial/header.phtml
@@ -1,31 +1,57 @@
 <header>
-<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-    <div class="container">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="<?php echo $this->url('home') ?>"><img src="<?php echo $this->basePath('front/img/logo.png') ?>" alt="Hr Consultancy"/>&nbsp;<?php echo $this->translate('') ?></a>
+    <div class="top-bar">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-6 col-xs-4">
+                    <div class="top-number"><p><i class="fa fa-phone-square"></i>&nbsp;+91 9263 189 425</p></div>
+                </div>
+                <div class="col-sm-6 col-xs-8">
+                   <div class="social">
+                        <ul class="social-share">
+                            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                            <li><a href="#"><i class="fa fa-linkedin"></i></a></li> 
+                            <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
+                            <li><a href="#"><i class="fa fa-skype"></i></a></li>
+                        </ul>
+                        <div class="search">
+                            <form role="form">
+                                <input type="text" class="search-form" autocomplete="off" placeholder="Search">
+                                <i class="fa fa-search"></i>
+                            </form>
+                       </div>
+                   </div>
+                </div>
+            </div>
+        </div><!--/.container-->
+    </div><!--/.top-bar-->
+    <nav class="navbar navbar-inverse" role="navigation">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="<?php echo $this->url('home') ?>"><img src="<?php echo $this->basePath('front/img/logo.png') ?>" alt="Hr Consultancy"/>&nbsp;<?php echo $this->translate('') ?></a>
+            </div>
+            <div class="collapse navbar-collapse navbar-right">
+                <?php // <-- Update this !!
+                    echo $this->navigation('left')
+                        ->menu()
+                        ->setMinDepth(0)
+                        ->setMaxDepth(0)
+                        ->setUlClass('nav navbar-nav');
+                ?>
+                <?php // <-- Update this !!
+                    echo $this->navigation('right')
+                        ->menu()
+                        ->setMinDepth(0)
+                        ->setMaxDepth(0)
+                        // ->setPartial('partial/breadcrumb.phtml')
+                        ->setUlClass('nav navbar-nav pull-right');
+                ?>
+            </div><!--/.nav-collapse -->
         </div>
-        <div class="collapse navbar-collapse">
-            <?php // <-- Update this !!
-                echo $this->navigation('left')
-                    ->menu()
-                    ->setMinDepth(0)
-                    ->setMaxDepth(0)
-                    ->setUlClass('nav navbar-nav');
-            ?>
-            <?php // <-- Update this !!
-                echo $this->navigation('right')
-                    ->menu()
-                    ->setMinDepth(0)
-                    ->setMaxDepth(0)
-                    // ->setPartial('partial/breadcrumb.phtml')
-                    ->setUlClass('nav navbar-nav pull-right');
-            ?>
-        </div><!--/.nav-collapse -->
-    </div>
-</nav>
-    </header>
+    </nav>
+</header>
