--- a/module/Job/view/template/index/index.phtml
+++ b/module/Job/view/template/index/index.phtml
@@ -1,12 +1,12 @@
-
 <div class="row">
     <div class="col-md-12">
         <div class="page-header"><h1>Recent Jobs</h1></div>
         <?php foreach ($jobs as $val) : ?>
         <div class="page-title"><h2><?php echo $val->title; ?></h2></div>
             <div class="page-body">
-                <?php echo $val->description; ?> ...<a href="<?php echo $this->serverUrl($this->url('job', array('action'=>'view', 'id'=>$val->id))); ?>"> Read more </a>
+                <?php echo $val->description; ?> ...<a class="btn-more" href="<?php echo $this->serverUrl($this->url('job', array('action'=>'view', 'id'=>$val->id))); ?>"> Read more </a>
             </div>
         <?php endforeach; ?>
     </div>
 </div>
+<p>&nbsp;</p>
