Updates added footer navigation block
Signed-off-by: Roshan <roshan.bhagat@perficient.com>

--- a/module/Admin/view/template/page/index.phtml
+++ b/module/Admin/view/template/page/index.phtml
@@ -24,7 +24,7 @@ $this->headTitle($title);
                 <td><?php echo $this->escapeHtml($val->id);?></td>
                 <td><?php echo $this->escapeHtml($val->title);?></td>
                 <td><?php echo $this->escapeHtml($val->identifier);?></td>
-                <td><?php echo $this->escapeHtml($val->contents);?></td>
+                <td><?php echo substr($val->contents, 0, 300);?>...</td>
                 <td><?php echo $this->escapeHtml($this->dateFormat(new DateTime($val->createdat), IntlDateFormatter::MEDIUM,IntlDateFormatter::MEDIUM));?></td>
                 <td><?php echo $this->escapeHtml($this->dateFormat(new DateTime($val->updatedat), IntlDateFormatter::MEDIUM,IntlDateFormatter::MEDIUM));?></td>
                 <td>
