--- a/module/Application/view/template/index/index.phtml
+++ b/module/Application/view/template/index/index.phtml
@@ -19,8 +19,7 @@
 <script type="text/javascript">
     $(document).ready( function() {
         $('#myCarousel').carousel({
-            interval:   4000
-        });
+            interval:   3000
 
         var clickEvent = false;
         $('#myCarousel').on('click', '.nav a', function() {
@@ -45,65 +44,28 @@
 <div id="myCarousel" class="carousel slide" data-ride="carousel">
     <!-- Wrapper for slides -->
     <div class="carousel-inner">
-        <div class="item active">
-            <img src="<?php echo $this->basePath('front/img/About Us.png') ?>">
-            <div class="carousel-caption">
+        <?php $i = 0; foreach($banners as $val) { ?>
+        <div class="item <?php if($i == 0) { echo 'active'; } ?> ">
+            <img src="<?php echo $this->basePath($val->banner) ?>">
+<!--<div class="carousel-caption">
                 <h3>
-                    Headline</h3>
+                    Headline</h3> 
                 <p>
                     Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
                     tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. Lorem
                     ipsum dolor sit amet, consetetur sadipscing elitr.</p>
-            </div>
+            </div>-->
         </div>
-        <!-- End Item -->
-        <div class="item">
-            <img src="<?php echo $this->basePath('front/img/Projects.png') ?>">
-            <div class="carousel-caption">
-                <h3>
-                    Headline</h3>
-                <p>
-                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
-                    tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. Lorem
-                    ipsum dolor sit amet, consetetur sadipscing elitr.</p>
-            </div>
-        </div>
-        <!-- End Item -->
-        <div class="item">
-            <img src="<?php echo $this->basePath('front/img/Portfolio.png') ?>">
-            <div class="carousel-caption">
-                <h3>
-                    Headline</h3>
-                <p>
-                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
-                    tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. Lorem
-                    ipsum dolor sit amet, consetetur sadipscing elitr.</p>
-            </div>
-        </div>
-        <!-- End Item -->
-        <div class="item">
-            <img src="<?php echo $this->basePath('front/img/Services.png') ?>">
-            <div class="carousel-caption">
-                <h3>
-                    Headline</h3>
-                <p>
-                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
-                    tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. Lorem
-                    ipsum dolor sit amet, consetetur sadipscing elitr.</p>
-            </div>
-        </div>
+        <?php $i++; } ?>
         <!-- End Item -->
     </div>
     <!-- End Carousel Inner -->
-    <ul class="nav nav-pills nav-justified">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"><a href="#">About<small>Lorem
-                    ipsum dolor sit</small></a></li>
-        <li data-target="#myCarousel" data-slide-to="1"><a href="#">Projects<small>Lorem ipsum
-                    dolor sit</small></a></li>
-        <li data-target="#myCarousel" data-slide-to="2"><a href="#">Portfolio<small>Lorem ipsum
-                    dolor sit</small></a></li>
-        <li data-target="#myCarousel" data-slide-to="3"><a href="#">Services<small>Lorem ipsum
-                    dolor sit</small></a></li>
+<ul class="nav nav-pills nav-justified">
+        <?php // $i = 0; foreach($bannersmenu as $val) { ?>
+<!--        <li data-target="#myCarousel" data-slide-to="<?php // echo $i; ?>" class="active">
+            <a href="#"><img src="<?php // echo $this->basePath($val->banner) ?>"></a>
+        </li>-->
+        <?php // $i++; } ?>                    
     </ul>
 </div>
 <!-- End Carousel -->
