--- a/module/Contact/view/template/index/index.phtml
+++ b/module/Contact/view/template/index/index.phtml
@@ -19,42 +19,51 @@ $this->headTitle($title);
                     <strong>Contact No's</strong><br/>
                     <p><i class="glyphicon glyphicon-phone-alt"></i> <abbr title="Phone">P</abbr>: +91 712 2222 745</p>
                     <p><i class="glyphicon glyphicon-phone"></i> <abbr title="Mobile">M</abbr>: +91 9263 189 425</p>
-                    <p><i class="glyphicon glyphicon-envelope"></i> <abbr title="Email">E</abbr>: <a href="mailto:help@goyalhr.com">help@goyalhr.com</a></p>
+                    <p><i class="glyphicon glyphicon-envelope"></i> <abbr title="Email">E</abbr>: <a href="mailto:support@goyalhr.com">support@goyalhr.com</a></p>
                     <p><i class="glyphicon glyphicon-time"></i> <abbr title="Hours">H</abbr>: Monday - Friday: 9:00 AM to 5:00 PM</p>
                 </p>
             </div>
             <div class="col-md-8">
+                <div class="gmap">
                 <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script><div style="overflow:hidden;height:450px;width:600px;"><div id="gmap_canvas" style="height:450px;width:600px;"></div><style>#gmap_canvas img{max-width:none!important;background:none!important}</style><a class="google-map-code" href="http://www.themecircle.net" id="get-map-data">Goyal HR Consulting</a></div><script type="text/javascript"> function init_map(){var myOptions = {zoom:15,center:new google.maps.LatLng(22.8088144,86.2023944),mapTypeId: google.maps.MapTypeId.TERRAIN};map = new google.maps.Map(document.getElementById("gmap_canvas"), myOptions);marker = new google.maps.Marker({map: map,position: new google.maps.LatLng(22.8088144, 86.2023944)});infowindow = new google.maps.InfoWindow({content:"<b>Goyal HR Consulting</b><br/>Birenu Asha Palace <br/>121, Sanjay Road Sakchi, <br/>Jamshedpur, Jharkhand, India  - <br/>831001  " });google.maps.event.addListener(marker, "click", function(){infowindow.open(map,marker);});infowindow.open(map,marker);}google.maps.event.addDomListener(window, 'load', init_map);</script>
+                </div>
             </div>
             <div class="col-md-12"><br/>
-                <p>You can also email us your queries, please feel free to fill the form below...</p>
-                <form class="form-horizontal" role="form" id="tab" method="post" action="<?php echo $this->serverUrl($this->url('contact', array('action'=>'save'))); ?>">
-                    <div class="form-group">
-                        <label for="name" class="col-md-2 control-label">Name</label>
-                        <div class="col-md-5">
-                            <input type="text" class="form-control" value="" name="name" placeholder="Name">
-                        </div>
+                <div class="contact-us container">
+                    <div class="center">        
+                        <h2>Drop Your Message</h2>
+                        <p class="lead">You can also mail us your queries, please feel free to fill the form below...</p>
                     </div>
-                    <div class="form-group">
-                        <label for="email" class="col-md-2 control-label">Email</label>
-                        <div class="col-md-5">
-                            <input type="text" class="form-control" value="" name="email" placeholder="Email">
-                        </div>
+                    <div class="row contact-wrap"> 
+                        <form class="form-horizontal" role="form" id="tab" method="post" action="<?php echo $this->serverUrl($this->url('contact', array('action'=>'save'))); ?>">
+                            <div class="form-group">
+                                <label for="name" class="col-md-2 control-label">Name <em>*</em></label>
+                                <div class="col-md-5">
+                                    <input type="text" class="form-control" value="" name="name" placeholder="Name" required="required">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label for="email" class="col-md-2 control-label">Email <em>*</em></label>
+                                <div class="col-md-5">
+                                    <input type="email" class="form-control" value="" name="email" placeholder="Email" required="required">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label for="message" class="col-md-2 control-label">Message <em>*</em></label>
+                                <div class="col-md-7">
+                                    <textarea name="message" class="form-control" placeholder="Message" required="required"></textarea>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="col-md-offset-2 col-md-7">
+                                    <button id="btn-signup" type="submit" class="btn btn-primary"><i class="icon-hand-right"></i>
+                                        Submit Message
+                                    </button>
+                                </div>
+                            </div>
+                        </form>
                     </div>
-                    <div class="form-group">
-                        <label for="message" class="col-md-2 control-label">Message</label>
-                        <div class="col-md-7">
-                            <textarea name="message" class="form-control" placeholder="Message"></textarea>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <div class="col-md-offset-2 col-md-7">
-                            <button id="btn-signup" type="submit" class="btn btn-primary"><i class="icon-hand-right"></i>
-                                Submit
-                            </button>
-                        </div>
-                    </div>
-                </form>
+                </div>
             </div>
         </div>
     </div>
