--- a/module/User/view/template/jobseeker/uploadresume.phtml
+++ b/module/User/view/template/jobseeker/uploadresume.phtml
@@ -5,6 +5,12 @@
             <form class="form-horizontal" role="form" method="post" enctype="multipart/form-data" action="<?php echo $this->serverUrl($this->url('jobseeker', array('action'=>'uploadresume'))); ?>">
                 <input type="hidden" name="id" value="<?php echo $id; ?>" />
                 <div class="form-group">
+                    <label for="password" class="col-md-3 control-label">Resume Title</label>
+                    <div class="col-md-5">
+                        <input type="text"  name="title" value="" placeholder="Resume Title" />
+                    </div>
+                </div>
+                <div class="form-group">
                     <label for="password" class="col-md-3 control-label">Upload Resume</label>
                     <div class="col-md-5">
                         <input type="file"  name="resume" value="" placeholder="Upload Resume" />
@@ -20,4 +26,23 @@
             </form>
         </div>
     </div>
+    <table class="table">
+        <tr style="background-color:#2a6496;color: #ffffff">
+            <td style="width:100px">Sr. No.</td>
+            <th>Title</th>
+            <th width="75">&nbsp;</th>
+        </tr>
+        <?php foreach ($resumes as $val) : ?>
+            <tr style="background-color: <?php echo $this->cycle(array('#FFF', '#F0F0F0'))->next(); ?>">
+                <td><?php echo $val->id; ?></td>
+                <td><?php echo $this->escapeHtml(($val->title));?></td>
+                <td>
+                    <a href="<?php echo $this->serverUrl($this->url('jobseeker',
+                        array('action'=>'delete', 'id' => $val->id)));?>"><i class="glyphicon glyphicon-info-sign"></i></a>
+                    <a href="<?php echo $this->serverUrl($this->url('jobseeker',
+                        array('action'=>'delete', 'id' => $val->id)));?>"><i class="glyphicon glyphicon-trash"></i></a>
+                </td>
+            </tr>
+        <?php endforeach; ?>
+    </table>
 </div>
