--- a/module/Application/view/partial/header.phtml
+++ b/module/Application/view/partial/header.phtml
@@ -3,7 +3,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-6 col-xs-4">
-                    <div class="top-number"><p><i class="fa fa-phone-square"></i>&nbsp;+91 9263 189 425</p></div>
+                    <div class="top-number"><p><i class="fa fa-phone-square"></i> or <i class="fa fa-whatsapp"></i>&nbsp;+91 9835 565 108</p></div>
                 </div>
                 <div class="col-sm-6 col-xs-8">
                    <div class="social">
@@ -11,8 +11,8 @@
                             <li><a href="https://www.facebook.com/Goyal-HR-Consulting-897871160248188" target="_blank"><i class="fa fa-facebook"></i></a></li>
                             <li><a href="https://twitter.com/GoyalHrConsult" target="_blank"><i class="fa fa-twitter"></i></a></li>
                             <li><a href="https://plus.google.com/u/0/115960799716399067901" target="_blank"><i class="fa fa-google-plus"></i></a></li>
-                            <li><a href="#" target="_blank"><i class="fa fa-linkedin"></i></a></li> 
-                            <li><a href="#" target="_blank"><i class="fa fa-skype"></i></a></li>
+                            <li><a href="https://www.linkedin.com/company/goyal-hr-consulting" target="_blank"><i class="fa fa-linkedin"></i></a></li> 
+                            <li><a href="skype:goyalhrconsulting" target="_blank"><i class="fa fa-skype"></i></a></li>
                         </ul>
                         <div class="search">
                             <form role="form">
@@ -49,7 +49,7 @@
                         ->setMinDepth(0)
                         ->setMaxDepth(0)
                         // ->setPartial('partial/breadcrumb.phtml')
-                        ->setUlClass('nav navbar-nav pull-right');
+                        ->setUlClass('nav navbar-nav');
                 ?>
             </div><!--/.nav-collapse -->
         </div>
