--- a/module/User/view/template/jobseeker/jobapplication.phtml
+++ b/module/User/view/template/jobseeker/jobapplication.phtml
@@ -7,15 +7,21 @@ $this->headTitle($title);
     <h1><?php echo $this->escapeHtml($title); ?></h1>
     <table class="table">
         <tr style="background-color:#2a6496;color: #ffffff">
-            <td>&nbsp;</td>
+            <td style="width:10%;">&nbsp;</td>
             <th>Job Title</th>
-            <th>Apply Date</th>
+            <th style="width:25%;">Apply Date</th>
+            <th style="width:10%;"></th>
         </tr>
-        <?php foreach ($japplication as $val) : ?>
+        <?php $i=1; foreach ($jobapplication as $val) : ?>
             <tr style="background-color: <?php echo $this->cycle(array('#FFF', '#F0F0F0'))->next(); ?>">
-                <td>&nbsp;</td>
-                <td><?php echo $this->escapeHtml(ucwords($val->title));?></td>
-                <td><?php echo $this->escapeHtml($val->applydate);?></td>
+                <td><?php echo $i++; ?></td>
+                <td><?php echo $this->escapeHtml(ucwords($val->jobtitle));?></td>
+                <td><?php echo $this->dateFormat(new DateTime($val->applydate), IntlDateFormatter::LONG,IntlDateFormatter::MEDIUM); ?></td>
+                <td>
+                    <a href="<?php echo $this->serverUrl($this->url('jobseeker',
+                        array('action'=>'deleteapplication', 'id' => $val->id)));?>"><i class="glyphicon glyphicon-trash"></i></a>
+                </td>
+    </td>
             </tr>
         <?php endforeach; ?>
     </table>
